--- a/singleblog.html
+++ b/singleblog.html
@@ -34,8 +34,8 @@
         <link href="css/layout.css" rel="stylesheet" type="text/css" />
         <link href="css/style.css?v=force_update_4" rel="stylesheet" type="text/css" />
 
-        <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
-        <link href="images/webclip.png" rel="apple-touch-icon" />
+        <link href="images/LOGO.PNG" rel="shortcut icon" type="image/png" />
+        <link href="images/LOGO.PNG" rel="apple-touch-icon" />
         
         <style>
             /* IMPORTANT: Disable hero video on single blog post page */
