--- a/terms.html
+++ b/terms.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Terms and Conditions | Wevolv3</title>
   <meta name="description" content="Wevolv3 Terms and Conditions - Read our terms of service and usage policies." />
-  <link rel="icon" href="/logo.png" type="image/png" />
+  <link rel="icon" href="/images/LOGO.PNG" type="image/png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
