--- a/privacy.html
+++ b/privacy.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Privacy Policy | Wevolv3</title>
   <meta name="description" content="Wevolv3 Privacy Policy - Learn how we collect, use, and protect your personal information." />
-  <link rel="icon" href="/logo.png" type="image/png" />
+  <link rel="icon" href="/images/LOGO.PNG" type="image/png" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
