🎨 Update favicon to use new FAVICON.png

--- a/blog.html
+++ b/blog.html
@@ -29,8 +29,8 @@
         <link href="css/layout.css" rel="stylesheet" type="text/css" />
         <link href="css/style.css?v=force_update_4" rel="stylesheet" type="text/css" />
 
-        <link href="images/LOGO.PNG" rel="shortcut icon" type="image/png" />
-        <link href="images/LOGO.PNG" rel="apple-touch-icon" />
+        <link href="images/FAVICON.png" rel="shortcut icon" type="image/png" />
+        <link href="images/FAVICON.png" rel="apple-touch-icon" />
         
         <style>
             /* Loading State */
