--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <link href="css/style.css?v=force_update_2" rel="stylesheet" type="text/css" />
 
 
-        <link href="images/LOGO.PNG" rel="shortcut icon" type="image/png" />
-        <link href="images/LOGO.PNG" rel="apple-touch-icon" />
+        <link href="images/FAVICON.png" rel="shortcut icon" type="image/png" />
+        <link href="images/FAVICON.png" rel="apple-touch-icon" />
 
     </head>
 
