✨ Add Sanity preview mode support

--- a/about.html
+++ b/about.html
@@ -45,6 +45,18 @@
 
         <link href="images/FAVICON.png" rel="shortcut icon" type="image/png" />
         <link href="images/FAVICON.png" rel="apple-touch-icon" />
+        
+        <style>
+            /* Remove custom cursor on all pages */
+            .cursor-wrapp, .cursor {
+                display: none !important;
+                visibility: hidden !important;
+                pointer-events: none !important;
+            }
+            body {
+                cursor: auto !important;
+            }
+        </style>
 
     </head>
 
