🔧 Fix: Padronizar referências do favicon (FAVICON.png → favicon.png)
- Corrigir todas as referências de FAVICON.png para favicon.png
- Ajustar em todos os arquivos HTML e manifest.json
- Evitar requisições 404 e melhorar performance

--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,8 @@
         <link href="css/style.css" rel="stylesheet" type="text/css" />
 
 
-        <link href="images/FAVICON.png" rel="shortcut icon" type="image/png" />
-        <link href="images/FAVICON.png" rel="apple-touch-icon" />
+        <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
+        <link href="images/favicon.png" rel="apple-touch-icon" />
         
         <style>
             /* Remove custom cursor on all pages */
