--- a/about.html
+++ b/about.html
@@ -43,8 +43,8 @@
         <link href="css/style.css" rel="stylesheet" type="text/css" />
 
 
-        <link href="images/FAVICON.png" rel="shortcut icon" type="image/png" />
-        <link href="images/FAVICON.png" rel="apple-touch-icon" />
+        <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
+        <link href="images/favicon.png" rel="apple-touch-icon" />
         
         <style>
             /* Remove custom cursor on all pages */
@@ -138,7 +138,7 @@
                             <img src="images/plus.png"  alt="" class="mission-plus mission-plus-right" />
                         </div>
                         <div class="mission-content">
-                            <img src="images/ab2.jpg"  alt="" class="mission-img mission-img-right" />
+                            <img src="images/ab2.jpg"  alt="" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
                                 <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter.</p>
