--- a/studio.html
+++ b/studio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting to Blog Editor...</title>
-    <link href="images/FAVICON.png" rel="shortcut icon" type="image/png" />
+    <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
     <style>
         body {
             background: #000;
