--- a/works.html
+++ b/works.html
@@ -43,8 +43,8 @@
         <link href="css/style.css" rel="stylesheet" type="text/css" />
 
 
-        <link href="images/FAVICON.png" rel="shortcut icon" type="image/png" />
-        <link href="images/FAVICON.png" rel="apple-touch-icon" />
+        <link href="images/favicon.png" rel="shortcut icon" type="image/png" />
+        <link href="images/favicon.png" rel="apple-touch-icon" />
         
         <style>
             /* Remove custom cursor on all pages */
