🔧 Fix: Corrigir URL do Sanity Studio para o editor correto
- Alterar URL de dashboard para editor do Sanity Studio
- Mudar de 'sanity.io/@omH6dEUOk/studio/...' para 'sszuldy6.sanity.studio'
- Corrigir redirects em _redirects, netlify.toml e studio.html
- Usar URL padrão baseada no Project ID (sszuldy6)

--- a/studio.html
+++ b/studio.html
@@ -40,7 +40,7 @@
     </div>
     <script>
         // Redirect to Sanity Studio
-        window.location.replace('https://sanity.io/@omH6dEUOk/studio/oz6fuqwi7pfb9q46syts438l/default');
+        window.location.replace('https://sszuldy6.sanity.studio');
     </script>
 </body>
 </html>
