✨ SEO: Adiciona alt text descritivo, corrige hierarquia de cabeçalhos e links internos estratégicos
- Adiciona alt text descritivo em todas as imagens principais (projetos, equipe, clientes, artigos)
- Corrige hierarquia de cabeçalhos em singleblog.html (H2 e H3 agora renderizam corretamente)
- Adiciona links internos estratégicos no conteúdo (index, about, singleblog)
- Melhora acessibilidade e SEO com descrições adequadas para imagens decorativas
- Adiciona seção de links internos no final de cada artigo do blog

--- a/about.html
+++ b/about.html
@@ -115,7 +115,7 @@
                 <div class="mission-grid">
                     <div data-w-id="darkyn09" style="opacity: 0;" class="mission-left">
                         <div class="mission-title">
-                            <img src="images/plus.png"  alt="" class="mission-plus" />
+                            <img src="images/plus.png"  alt="Plus icon" class="mission-plus" />
                             <h4 class="mission-heading">
                                 Our<br />
                                 Mission
@@ -123,10 +123,10 @@
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
-                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns.</p>
+                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="works.html" style="color: #ff6b35; text-decoration: underline;">View our portfolio</a> to see our work in action.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
-                            <img src="images/ab1.jpg"  alt="" class="mission-img" />
+                            <img src="images/ab1.jpg"  alt="Wevolv3 Web3 Marketing Agency Team" class="mission-img" />
                         </div>
                     </div>
                     <div data-w-id="darkyn24" style="opacity: 0;" class="mission-right">
@@ -135,13 +135,13 @@
                                 Our<br />
                                 vision
                             </h4>
-                            <img src="images/plus.png"  alt="" class="mission-plus mission-plus-right" />
+                            <img src="images/plus.png"  alt="Plus icon" class="mission-plus mission-plus-right" />
                         </div>
                         <div class="mission-content">
-                            <img src="images/ab2.jpg"  alt="" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
+                            <img src="images/ab2.jpg"  alt="Wevolv3 Vision - Modular Advertising Solutions" class="mission-img mission-img-right" onerror="this.onerror=null; this.src='images/ab1.jpg';" />
                             <div class="mission-text-box">
                                 <div class="mission-orange-box mission-transparent"></div>
-                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter.</p>
+                                <p class="mission-paragraph mission-paragraph-right">We believe in modular advertising - creating flexible, scalable marketing solutions that adapt to the unique needs of each project. Our team combines deep expertise in Web3 technologies with proven marketing strategies to deliver results that matter. Learn more about our <a href="blog.html" style="color: #ff6b35; text-decoration: underline;">marketing insights</a> and strategies.</p>
                             </div>
                         </div>
                     </div>
@@ -155,21 +155,21 @@
                 <div class="testimonials-grid">
                     <div data-w-id="darkyn07" style="opacity: 0;" class="trstimonials-item">
                         <div class="testimonial-item-box">
-                            <img src="images/quote.png"  alt="" class="testimonials-quote" />
+                            <img src="images/quote.png"  alt="Quote icon" class="testimonials-quote" />
                             <h4 class="testimonial-heading">Crypto Project Founder</h4>
                         </div>
                         <div class="testimonials-img-txt">
-                            <img src="images/testimonials-photo1.png"  alt="" class="testimonial-img" />
+                            <img src="images/testimonials-photo1.png"  alt="Crypto Project Founder testimonial" class="testimonial-img" />
                             <p class="testimonials-txt">Wevolv3 transformed our Web3 project with their innovative marketing strategies. Their deep understanding of blockchain ecosystems and modular advertising approach delivered exceptional results that exceeded our expectations.</p>
                         </div>
                     </div>
                     <div data-w-id="darkyn29" style="opacity: 0;" class="trstimonials-item">
                         <div class="testimonial-item-box">
-                            <img src="images/quote.png"  alt="" class="testimonials-quote" />
+                            <img src="images/quote.png"  alt="Quote icon" class="testimonials-quote" />
                             <h4 class="testimonial-heading">DeFi Protocol CEO</h4>
                         </div>
                         <div class="testimonials-img-txt">
-                            <img src="images/testimonials-photo2.png"  alt="" class="testimonial-img" />
+                            <img src="images/testimonials-photo2.png"  alt="DeFi Protocol CEO testimonial" class="testimonial-img" />
                             <p class="testimonials-txt">Wevolv3 transformed our Web3 project with their innovative marketing strategies. Their deep understanding of blockchain ecosystems and modular advertising approach delivered exceptional results that exceeded our expectations.</p>
                         </div>
                     </div>
@@ -182,11 +182,11 @@
                 <h2 class="main-title">clients</h2>
                 <div class="hero-partners partners-about">
                     <div data-w-id="darkyn27" class="hero-partners-moving">
-                        <img src="images/Clandestine.png"  width="238.5" alt="" class="hero-client-logo" /><img src="images/Boltshift.png"  width="182.5" alt="" class="hero-client-logo" />
-                        <img src="images/Biosynthesis.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/BuildingBlocks.png"  width="238.5" sizes="(max-width: 479px) 100vw, 238.5px" alt="" srcset="images/BuildingBlocks-p-500.png 500w, images/BuildingBlocks.png 566w" class="hero-client-logo" />
-                        <img src="images/AltShift.png"  width="179.5" alt="" class="hero-client-logo" /><img src="images/Clandestine.png"  width="238.5" alt="" class="hero-client-logo" />
-                        <img src="images/Boltshift.png"  width="182.5" alt="" class="hero-client-logo" /><img src="images/Biosynthesis.png"  width="238.5" alt="" class="hero-client-logo" />
+                        <img src="images/Clandestine.png"  width="238.5" alt="Clandestine - Wevolv3 Client" class="hero-client-logo" /><img src="images/Boltshift.png"  width="182.5" alt="Boltshift - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/Biosynthesis.png"  width="238.5" alt="Biosynthesis - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/BuildingBlocks.png"  width="238.5" sizes="(max-width: 479px) 100vw, 238.5px" alt="BuildingBlocks - Wevolv3 Client" srcset="images/BuildingBlocks-p-500.png 500w, images/BuildingBlocks.png 566w" class="hero-client-logo" />
+                        <img src="images/AltShift.png"  width="179.5" alt="AltShift - Wevolv3 Client" class="hero-client-logo" /><img src="images/Clandestine.png"  width="238.5" alt="Clandestine - Wevolv3 Client" class="hero-client-logo" />
+                        <img src="images/Boltshift.png"  width="182.5" alt="Boltshift - Wevolv3 Client" class="hero-client-logo" /><img src="images/Biosynthesis.png"  width="238.5" alt="Biosynthesis - Wevolv3 Client" class="hero-client-logo" />
                     </div>
                 </div>
             </div>
@@ -198,12 +198,12 @@
                 <div data-w-id="darkyn29" style="opacity: 0;" class="team-grid">
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="" src="images/team1.png"  class="team-img" />
+                            <img alt="Wevolv3 Team Member - Web3 Marketing Specialist" src="images/team1.png"  class="team-img" />
                             <div class="team-scials">
-                                <a href="https://x.com/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="" class="social-image" /></a>
-                                <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_06.png" alt="" class="social-image" /></a>
-                                <a href="https://t.me/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="" class="social-image" /></a>
-                                <a href="https://wevolv3.com/blog" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_12.png" alt="" class="social-image" /></a>
+                                <a href="https://x.com/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="Twitter - Wevolv3" class="social-image" /></a>
+                                <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_06.png" alt="LinkedIn - Wevolv3" class="social-image" /></a>
+                                <a href="https://t.me/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="Telegram - Wevolv3" class="social-image" /></a>
+                                <a href="https://wevolv3.com/blog" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_12.png" alt="Blog - Wevolv3" class="social-image" /></a>
                             </div>
                         </div>
                         <div class="team-details">
@@ -213,12 +213,12 @@
                     </div>
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="" src="images/team2.png"  class="team-img" />
+                            <img alt="Wevolv3 Team Member - Growth Hacking Specialist" src="images/team2.png"  class="team-img" />
                             <div class="team-scials">
-                                <a href="https://x.com/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="" class="social-image" /></a>
-                                <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_06.png" alt="" class="social-image" /></a>
-                                <a href="https://t.me/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="" class="social-image" /></a>
-                                <a href="https://wevolv3.com/blog" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_12.png" alt="" class="social-image" /></a>
+                                <a href="https://x.com/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="Twitter - Wevolv3" class="social-image" /></a>
+                                <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_06.png" alt="LinkedIn - Wevolv3" class="social-image" /></a>
+                                <a href="https://t.me/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="Telegram - Wevolv3" class="social-image" /></a>
+                                <a href="https://wevolv3.com/blog" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_12.png" alt="Blog - Wevolv3" class="social-image" /></a>
                             </div>
                         </div>
                         <div class="team-details">
@@ -228,12 +228,12 @@
                     </div>
                     <div class="team-item">
                         <div class="team-image-wrapp">
-                            <img alt="" src="images/team3.png"  class="team-img" />
+                            <img alt="Wevolv3 Team Member - Blockchain Strategy Specialist" src="images/team3.png"  class="team-img" />
                             <div class="team-scials">
-                                <a href="https://x.com/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="" class="social-image" /></a>
-                                <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_06.png" alt="" class="social-image" /></a>
-                                <a href="https://t.me/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="" class="social-image" /></a>
-                                <a href="https://wevolv3.com/blog" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_12.png" alt="" class="social-image" /></a>
+                                <a href="https://x.com/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_09.png" alt="Twitter - Wevolv3" class="social-image" /></a>
+                                <a href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_06.png" alt="LinkedIn - Wevolv3" class="social-image" /></a>
+                                <a href="https://t.me/wevolv3" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_03.png" alt="Telegram - Wevolv3" class="social-image" /></a>
+                                <a href="https://wevolv3.com/blog" target="_blank" class="social-link-2 w-inline-block"><img  src="images/socials_12.png" alt="Blog - Wevolv3" class="social-image" /></a>
                             </div>
                         </div>
                         <div id="w-node-_9ab0f5b9-c2c4-10f8-d11d-2e4fa0e20143-f888b461" class="team-details">
