--- a/blog.html
+++ b/blog.html
@@ -303,9 +303,9 @@
                                 <div class="blog-category">${isDraft ? '🔒 DRAFT - ' : ''}${category}</div>
                                 <h2 class="blog-heading">${title}</h2>
                                 <div class="blog-author-and-arrow">
-                                    <img src="images/author1.png" alt="" class="blog-author" />
+                                    <img src="images/author1.png" alt="Wevolv3 Author" class="blog-author" />
                                     <div class="blog-arrow">
-                                        <img src="images/bend-up-right-light.png" alt="" class="blog-arrow-icon" />
+                                        <img src="images/bend-up-right-light.png" alt="Arrow icon" class="blog-arrow-icon" />
                                     </div>
                                 </div>
                             </div>
