--- a/contact.html
+++ b/contact.html
@@ -120,19 +120,19 @@
                         <div class="footer-socials contact-socials">
                             <a data-w-id="darkyn37" href="https://x.com/wevolv3" target="_blank" class="social-item w-inline-block">
                                 <div class="social-text-2">X</div>
-                                <img  src="images/arrow3_1arrow3.png" alt="" class="social-arrow-2" />
+                                <img  src="images/arrow3_1arrow3.png" alt="Arrow icon" class="social-arrow-2" />
                             </a>
                             <a data-w-id="darkyn38" href="https://www.linkedin.com/company/wevol3-web3-marketing" target="_blank" class="social-item w-inline-block">
                                 <div class="social-text-2">linkedin</div>
-                                <img  src="images/arrow3_1arrow3.png" alt="" class="social-arrow-2" />
+                                <img  src="images/arrow3_1arrow3.png" alt="Arrow icon" class="social-arrow-2" />
                             </a>
                             <a data-w-id="darkyn39" href="https://t.me/wevolv3" target="_blank" class="social-item w-inline-block">
                                 <div class="social-text-2">telegram</div>
-                                <img  src="images/arrow3_1arrow3.png" alt="" class="social-arrow-2" />
+                                <img  src="images/arrow3_1arrow3.png" alt="Arrow icon" class="social-arrow-2" />
                             </a>
                             <a data-w-id="darkyn40" href="https://wevolv3.com/blog" target="_blank" class="social-item w-inline-block">
                                 <div class="social-text-2">blog</div>
-                                <img  src="images/arrow3_1arrow3.png" alt="" class="social-arrow-2" />
+                                <img  src="images/arrow3_1arrow3.png" alt="Arrow icon" class="social-arrow-2" />
                             </a>
                         </div>
                     </div>
