--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                         </div>
                         <div class="mission-content">
                             <div class="mission-text-box">
-                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns.</p>
+                                <p class="mission-paragraph">Wevolv3 is a Web3 Marketing & Modular Advertising Agency dedicated to transforming your vision into digital reality. We specialize in helping crypto, DeFi, and blockchain projects grow through innovative marketing strategies and targeted campaigns. <a href="about.html" style="color: #ff6b35; text-decoration: underline;">Learn more about us</a> or <a href="works.html" style="color: #ff6b35; text-decoration: underline;">view our portfolio</a>.</p>
                                 <div class="mission-orange-box"></div>
                             </div>
                             <img src="images/ab1.jpg"  alt="" class="mission-img" />
@@ -354,7 +354,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/work7.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/work7.jpg"  alt="Web3 Marketing Campaign - Crypto Marketing Services" class="work-img" /></div>
                                 <h4 class="heading">Web3 Campaign</h4>
                                 <div class="work-category">crypto marketing</div>
                             </a>
@@ -366,7 +366,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/work8.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/work8.jpg"  alt="DeFi Growth Marketing - Blockchain Marketing Solutions" class="work-img" /></div>
                                 <h4 class="heading">DeFi Growth</h4>
                                 <div class="work-category">blockchain</div>
                             </a>
@@ -378,7 +378,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/work9.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/work9.jpg"  alt="Token Launch Marketing - Web3 Token Marketing Services" class="work-img" /></div>
                                 <h4 class="heading">Token Launch</h4>
                                 <div class="work-category">web3</div>
                             </a>
@@ -395,8 +395,8 @@
                 <div class="testimonials-grid">
                     <div data-w-id="darkyn07" style="opacity: 0;" class="trstimonials-item">
                         <div class="testimonial-item-box">
-                            <img src="images/quote.png"  alt="" class="testimonials-quote" />
-                            <h4 class="testimonial-heading">Crypto Project Founder</h4>
+                        <img src="images/quote.png"  alt="Quote icon" class="testimonials-quote" />
+                        <h4 class="testimonial-heading">Crypto Project Founder</h4>
                         </div>
                         <div class="testimonials-img-txt">
                             <img src="images/testimonials-photo1.png"  alt="" class="testimonial-img" />
@@ -435,16 +435,16 @@
                                     <div class="blog-category">web3</div>
                                     <h2 class="blog-heading">Web3 Marketing Insights</h2>
                                     <div class="blog-author-and-arrow" style="border-color: rgb(41, 41, 41);">
-                                        <img  src="images/author2.png" alt="" class="blog-author" />
+                                        <img  src="images/author2.png" alt="Wevolv3 Author" class="blog-author" />
                                         <div class="blog-arrow" style="background-color: rgb(51, 51, 51);">
-                                            <img  src="images/bend-up-right-light.png" alt="" class="blog-arrow-icon" />
+                                            <img  src="images/bend-up-right-light.png" alt="Arrow icon" class="blog-arrow-icon" />
                                         </div>
                                     </div>
                                 </div>
                                 <img
                                     style="transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg); transform-style: preserve-3d;"
                                     data-w-id="darkyn44"
-                                    alt=""
+                                    alt="Web3 Marketing Insights - Wevolv3 Blog"
                                     src="images/post1.jpg"
                                     class="blog-image"
                                 />
@@ -462,8 +462,8 @@
                                     <div class="blog-category">marketing</div>
                                     <h2 class="blog-heading">Blockchain Growth Strategies</h2>
                                     <div class="blog-author-and-arrow">
-                                        <img  src="images/author3.png" alt="" class="blog-author" />
-                                        <div class="blog-arrow"><img  src="images/bend-up-right-light.png" alt="" class="blog-arrow-icon" /></div>
+                                        <img  src="images/author3.png" alt="Wevolv3 Author" class="blog-author" />
+                                        <div class="blog-arrow"><img  src="images/bend-up-right-light.png" alt="Arrow icon" class="blog-arrow-icon" /></div>
                                     </div>
                                 </div>
                                 <img
