--- a/works.html
+++ b/works.html
@@ -121,7 +121,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/work7.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/work7.jpg"  alt="Web3 Marketing Campaign - Crypto Marketing Services" class="work-img" /></div>
                                 <h4 class="heading">Web3 Campaign</h4>
                                 <div class="work-category">crypto marketing</div>
                             </a>
@@ -133,7 +133,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/work8.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/work8.jpg"  alt="DeFi Growth Marketing - Blockchain Marketing Solutions" class="work-img" /></div>
                                 <h4 class="heading">DeFi Growth</h4>
                                 <div class="work-category">blockchain</div>
                             </a>
@@ -145,7 +145,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/work9.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/work9.jpg"  alt="Token Launch Marketing - Web3 Token Marketing Services" class="work-img" /></div>
                                 <h4 class="heading">Token Launch</h4>
                                 <div class="work-category">web3</div>
                             </a>
@@ -157,7 +157,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/post7.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/post7.jpg"  alt="Web3 Marketing Campaign Portfolio" class="work-img" /></div>
                                 <h4 class="heading">Web3 Campaign</h4>
                                 <div class="work-category">crypto marketing</div>
                             </a>
@@ -169,7 +169,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/post8.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/post8.jpg"  alt="DeFi Growth Marketing Portfolio" class="work-img" /></div>
                                 <h4 class="heading">DeFi Growth</h4>
                                 <div class="work-category">blockchain</div>
                             </a>
@@ -181,7 +181,7 @@
                                 href="singlework.html"
                                 class="work-item w-inline-block"
                             >
-                                <div class="work-img-wrapp"><img src="images/post9.jpg"  alt="" class="work-img" /></div>
+                                <div class="work-img-wrapp"><img src="images/post9.jpg"  alt="Token Launch Marketing Portfolio" class="work-img" /></div>
                                 <h4 class="heading">Token Launch</h4>
                                 <div class="work-category">web3</div>
                             </a>
